--- a/index.html
+++ b/index.html
@@ -5,32 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+<!-- Section -->
+  <section class="section">
+    <section class="section-center">
+      <!-- Sedans -->
+      <div class="sedans">
+        <div class="container">
+          <img src="images/icon-sedans.svg" alt="sedan" class="image img-sedan">
+          <h2 class="title">Sedans</h2>
+          <p class="info">
+            Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+            or on your next road trip.
+          </p>
+          <a href="#" class="btn btn-sedans">Learn More</a>
+        </div>
+      </div>
+        <!-- Suvs -->
+      <div class="suvs">
+        <div class="container">
+          <img src="images/icon-suvs.svg" alt="suvs" class="image img-suv">
+          <h2 class="title">SUVs</h2>
+          <p class="info">
+            Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+    and off-road adventures.
+          </p>
+          <a href="#" class="btn btn-suvs">Learn More</a>
+        </div>
+      </div>
+        <!-- Luxury -->
+      <div class="luxury">
+        <div class="container">
+          <img src="images/icon-sedans.svg" alt="luxury" class="image img-luxury">
+          <h2 class="title">Luxury</h2>
+          <p class="info">
+            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+            rental and arrive in style.
+          </p>
+          <a href="#" class="btn btn-luxury">Learn More</a>
+        </div>
+      </div>
+    </section>
+  </section>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+   <!-- Footer -->
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://github.com/ismailcet" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/ismailcet" target="_blank">Ismailcet</a>.
   </div>
 </body>
 </html>
